--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -32,7 +32,7 @@
 
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>firma 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -54,7 +54,7 @@
 					<h2>firmaüritus</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 2</h3>
+						<h3>firma 2</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -76,7 +76,7 @@
 					<h2>firmaüritus</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 3</h3>
+						<h3>firma 3</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -108,7 +108,7 @@
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>pulmad 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -129,7 +129,7 @@
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>pulmad 2</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -151,7 +151,7 @@
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>pulmad 3</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -185,7 +185,7 @@
 					<h2>sünnipäev</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>sünna 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -207,7 +207,7 @@
 					<h2>sünnipäev</h2>
 				  	<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>sünna 2</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -229,7 +229,7 @@
 					<h2>sünnipäev</h2>
 				  	<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>sünna 3</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -263,7 +263,7 @@
 					<h2>kodukokk</h2>
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>kodukokk 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -285,7 +285,7 @@
 					<h2>kodukokk</h2>
 				  	<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>kodukokk 2</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -307,7 +307,7 @@
 					<h2>kodukokk</h2>
 				  	<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>pealkiri 1</h3>
+						<h3>kodukokk 3</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
