--- a/paring.html
+++ b/paring.html
@@ -2,13 +2,11 @@
 <html>
 	<meta charset="UTF-8">
 	<title>Miam Catering - Menüüd</title>
-	<link rel="stylesheet" type="text/css" href="normaliz.css">
 	<link rel="stylesheet" type="text/css" href="footer.css">
 	<link rel="stylesheet" type="text/css" href="header.css">
 	<link rel="stylesheet" type="text/css" href="paring.css">
 <body>
 	<div class="wrapper">
-		<div class="background">
 		<header class="main-header">
 			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
 			<nav class="main__nav">
@@ -74,8 +72,7 @@
 				<label>lisainfo</label>
 				<input class="form-control" type="text">
 			</div>
-		  	<input type="submit" value="Saada päring">
-		</form>
+		  	<button class="btn_send" type="submit">saada päring</button>
 		</main>
 		<footer class="main-footer">
 			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
@@ -87,7 +84,6 @@
 				<li><a href="#"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</footer>
-		</div>
 	</div>
 </body>
 </html>
