lisab võimaluse näidismenüüst valitud menüüd kuvada päringu tegemisel

--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -43,7 +43,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('firma', '1')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma1.png" alt="firma1">
@@ -65,7 +65,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('firma', '2')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma2.png" alt="firma2">
@@ -87,7 +87,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('firma', '3')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma3.png" alt="firma3">
@@ -119,7 +119,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('pulm', '1')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma1.png" alt="pulm1">
@@ -140,7 +140,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('pulm', '2')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma2.png" alt="pulm2">
@@ -162,7 +162,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('pulm', '3')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma3.png" alt="pulm3">
@@ -196,7 +196,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('synna', '1')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 				    	<img src="images/synna1.png" alt="synna1">
@@ -218,7 +218,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('synna','2')">saada päring</button>
 					</div>
 				  	<div class="retseptpilt">
 				    	<img src="images/synna2.png" alt="synna2">
@@ -240,7 +240,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('synna','3')">saada päring</button>
 					</div>
 				  	<div class="retseptpilt">
 				    	<img src="images/synna3.png" alt="synna3">
@@ -274,7 +274,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('kodukokk','1')">saada päring</button>
 					</div>
 					<div class="retseptpilt">
 				    	<img src="images/synna1.png" alt="synna1">
@@ -296,7 +296,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('kodukokk','2')">saada päring</button>
 					</div>
 				  	<div class="retseptpilt">
 				    	<img src="images/synna2.png" alt="synna2">
@@ -318,7 +318,7 @@
 							<li>chia pudding</li>
 						</ul>
 						<img class="nool" src="images/nool.png">
-						<button class="btn_send" type='submit'>saada päring</button>
+						<button class="btn_send" onclick="getAndRedirect('kodukokk','3')">saada päring</button>
 					</div>
 				  	<div class="retseptpilt">
 				    	<img src="images/synna3.png" alt="synna3">
